Changes for delete operation unit tests